--- a/app/views/screen/show.html.erb
+++ b/app/views/screen/show.html.erb
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
     <style>
         body {
             background: black;
@@ -32,7 +33,7 @@
 <body>
     <%= javascript_include_tag 'screen.js' %>
     <%= javascript_include_tag 'channels/support.js' %>
-    <%= video_tag("/assets/videos/0.2.mp4", :autoplay => true, :loop => true, :muted => true, style: "width:100%;z-index: 0") %>
+    <%= video_tag("/assets/videos/0.2.mp4", :autoplay => false, :loop => false, :muted => true, style: "width:100%;z-index: 0", :class => "video") %>
 </body>
 
 </html>
