--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -1,3 +1,32 @@
-<%= javascript_include_tag 'user.js' %>
-<div>スマホを振ってね<div>
-<div>攻撃しないで☆</div>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>voted</title>
+    <link rel="stylesheet" href="iphone_len_style.css" media="screen and (max-width: 480px)">
+</head>
+
+<body oncontextmenu="return false" oncopy="return false" onfocus="return false">
+    <section id="container" class="red">
+        <section id="event_container">
+            <div class="first_circle">
+                <div class="second_circle">
+                    <%= image_tag 'heart.png', :class => "heart" %>
+                </div>
+                <div class="tap">Tap !</div>
+            </div>
+            </div>
+        </section>
+        <section id="effect_container">
+            <div class="first_circle_effect">
+                <div class="second_circle_effect"></div>
+            </div>
+        </section>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <%= javascript_include_tag 'user.js' %>
+</body>
+</html>
