--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>voted</title>
+    <title>岩崎学園入学式2019</title>
     <link rel="stylesheet" href="iphone_len_style.css" media="screen and (max-width: 480px)">
 </head>
 
