動画差し替え&console.logの削除

--- a/app/views/screen/show.html.erb
+++ b/app/views/screen/show.html.erb
@@ -33,7 +33,7 @@
 <body>
     <%= javascript_include_tag 'screen.js' %>
     <%= javascript_include_tag 'channels/support.js' %>
-    <%= video_tag("/assets/videos/0.2.mp4", :autoplay => false, :loop => false, :muted => true, style: "width:100%;z-index: 0", :class => "video") %>
+    <%= video_tag("/assets/videos/bg_mov2.mp4", :autoplay => false, :loop => false, :muted => true, style: "width:100%;z-index: 0", :class => "video") %>
 </body>
 
 </html>
