--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,574 +1,186 @@
-// Place all the styles related to the User controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-#heart_body {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    overflow: hidden;
-  }
-  
-  body{
-    -webkit-touch-callout:none;
-    -webkit-user-select:none; 
-  }
-  
-  #event_container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 100;
-  }
-  
-  #effect_container{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 99;
-  }
-  
-  .first_circle_effect{
-    margin: 50vh auto 0;
-    transform: translateY(-50%);
-    width: 70vw;
-    background-color: transparent;
-    height: 70vw;
-    border-radius: 50%;
-    border: 9px solid white;
-    z-index: 100;
-  }
-  
-  .second_circle_effect{
-    margin: 3%;
-    width: 94%;
-    height: 94%;
-    border-radius: 50%;
-    background-color: transparent;
-    border: 3px solid white;
-  }
-  
-  .first_circle {
-    margin: 50vh auto 0;
-    transform: translateY(-50%);
-    width: 70vw;
-    background-color: transparent;
-    height: 70vw;
-    border-radius: 50%;
-    border: 9px solid white;
-  }
-  
-  .second_circle {
-    margin: 3%;
-    width: 94%;
-    height: 94%;
-    border-radius: 50%;
-    background-color: transparent;
-    border: 3px solid white;
-  }
-  
-  .second_circle img{
-  pointer-events: none;
-  }
-  
-  .heart {
-    width: 75%;
-    height: 75%;
-    margin: 12.5%;
-  }
-  
-  .tap {
-    margin: -65% auto 0;
-    font-family: vdl-megamaru, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    text-align: center;
-    font-size: 2em;
-  }
-  
-  
-  /* 色切り替え */
-  .red {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #FF7E7E;
-    color: #FF7E7E;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .yellow {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #FFF57E;
-    color: #FFF57E;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .green {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #B0FF7E;
-    color: #B0FF7E;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .lightblue {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #7EFFEB;
-    color: #7EFFEB;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .blue {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #7E88FF;
-    color: #7E88FF;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .purple {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    background-color: #FF7EFA;
-    color: #FF7EFA;
-    width: 100%;
-    height: 100%;
-  }
-  
-  /* アニメーションの実装 */
-  
-  @keyframes pulse {
-    0% {
-      transform: scale3d(1, 1, 1);
-    }
-  
-    50% {
-      transform: scale3d(1.1, 1.1, 1.1);
-    }
-  
-    100% {
-      transform: scale3d(1, 1, 1);
-    }
-  }
-  
-  @keyframes effect{
-    10%{
-      transform: scale3d(1.1, 1.1, 1.1);
-      opacity: 0;
-    }
-    85%{
-      transform: scale3d(1.8, 1.8, 1.8);
-      opacity: 0.5;
-    }
-    100%{
-      transform: scale3d(1.9, 1.9, 1.9);
-      opacity: 0;
-    }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  overflow: hidden;
+  //pointer-events: none;
+}
+
+// html, css{
+//   touch-action:none;
+// }
+
+body{
+  -webkit-touch-callout:none;
+  -webkit-user-select:none; 
+}
+
+#event_container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+}
+
+#effect_container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 99;
+}
+
+.first_circle_effect{
+  margin: 50vh auto 0;
+  transform: translateY(-50%);
+  width: 70vw;
+  background-color: transparent;
+  height: 70vw;
+  border-radius: 50%;
+  border: 9px solid white;
+  z-index: 100;
+}
+
+.second_circle_effect{
+  margin: 3%;
+  width: 94%;
+  height: 94%;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 3px solid white;
+}
+
+.first_circle {
+  margin: 50vh auto 0;
+  transform: translateY(-50%);
+  width: 70vw;
+  background-color: transparent;
+  height: 70vw;
+  border-radius: 50%;
+  border: 9px solid white;
+}
+
+.second_circle {
+  margin: 3%;
+  width: 94%;
+  height: 94%;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 3px solid white;
+}
+
+.second_circle img{
+pointer-events: none;
+}
+
+.heart {
+  width: 75%;
+  height: 75%;
+  margin: 12.5%;
+}
+
+.tap {
+  margin: -65% auto 0;
+  font-family: vdl-megamaru, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  font-size: 2em;
+}
+
+
+/* 色切り替え */
+.red {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #FF7E7E;
+  color: #FF7E7E;
+  width: 100%;
+  height: 100%;
+}
+
+.yellow {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #FFF57E;
+  color: #FFF57E;
+  width: 100%;
+  height: 100%;
+}
+
+.green {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #B0FF7E;
+  color: #B0FF7E;
+  width: 100%;
+  height: 100%;
+}
+
+.lightblue {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #7EFFEB;
+  color: #7EFFEB;
+  width: 100%;
+  height: 100%;
+}
+
+.blue {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #7E88FF;
+  color: #7E88FF;
+  width: 100%;
+  height: 100%;
+}
+
+.purple {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background-color: #FF7EFA;
+  color: #FF7EFA;
+  width: 100%;
+  height: 100%;
+}
+
+/* アニメーションの実装 */
+
+@keyframes pulse {
+  0% {
+    transform: scale3d(1, 1, 1);
   }
 
-  * {
-    padding: 0;
-    margin: 0;
+  50% {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    scroll-snap-type: y mandatory
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    vertical-align: bottom;
-}
-
-header {
-    background-image: url("./main_image.png");
-    background-size: cover;
-    height: 100vh;
-    scroll-snap-align: start;
-}
-
-header  div {
-    display: block;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-}
-
-header div img {
-    max-width: 23%;
-    height: auto;
-}
-
-header div span {
-    display: block;
-}
-
-.app_button {
-    border: none;
-    background-color: #231FFF;
-    border-radius: 22pt 22pt 22pt 22pt;
-    width: 70vw;
-    height: 6vh;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    font-size: 14pt;
-    margin-top: 10px;
-}
-
-.info {
-    text-align: center;
-    width: 77%;
-    left: 23%;
-    height: 20.9vh;
-    max-height: 140px;
-}
-
-.info h1 {
-    color: #2521FF;
-}
-
-.info h3 {
-    color: #2521FF;
-}
-
-.info a {
-    text-decoration: none;
-    color: white;
-}
-
-.summary {
-    background-image: url("./background-image.png");
-}
-
-#header_wrap {
-    width: 100vw;
-    height: 100vh;
-}
-
-.info_img {
-    display: flex
-}
-
-.info_img img {
-    margin: auto;
-}
-
-main {
-    background-image: url("./background-image.png");
-    height: 400vh;
-    width: 100%;
-    z-index: -10;
-}
-
-#mask {
-    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.68));
-    background-size: 100%;
-    width: 100%;
-    height: 400vh;
-    position: absolute;
-    z-index: -5;
-}
-
-.attention {
-    text-align: center;
-    color: #D1D1D1;
-    font-size: 12pt;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    line-height: 34px;
-    margin-top: 10px;
-}
-
-.attention span {
-    display: block;
-}
-
-.attention_section {
-    display: flex;
-    flex-direction: column;
-    margin: 30px 0;
-    vertical-align: middle;
-    /* line-height: auto; */
-}
-
-.strong {
-    display: table-cell;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    font-size: 18pt;
-    height: 0.5vh;
-    color: #7568FF;
-    /* line-height: 0; */
-}
-
-main section ul li {
-    height: 100vh;
-    scroll-snap-align: start;
-    padding-top: 20px;
-}
-
-main section {
-    height: 100vh;
-    scroll-snap-align: start;
-}
-
-.info_img {
-    height: 30%;
-    background-image: url("./info_back_image.png")
-}
-
-.info_img img {
-    text-align: center;
-}
-
-.start_button {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: #231FFF;
-    border: none;
-    color: aliceblue;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    font-size: 11px;
-    position: absolute;
-    right: 21px;
-    margin-top: 30px;
-}
-
-.start_button div img {
-    margin: 0 auto;
-    width: 35px;
-    height: 35px;
-    display: block;
-}
-
-.start_button div {
-    display: block;
-}
-
-.number_label {
-    border-radius: 50%;
-    background-color: #231FFF;
-    width: 42px;
-    height: 42px;
-    color: #D1D1D1;
-    display: flex;
-    margin: 50px auto;
-}
-
-.number_label div {
-    margin: auto;
-}
-
-.description {
-    overflow: hidden;
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    width: 88vw;
-    height: 28vh;
-    z-index: 5;
-}
-
-.cover_app_image {
-    position: absolute;
-    right: 10px;
-    margin-top: -110px;
-    z-index: 10;
-    transform: rotate(10deg);
-}
-
-#app_image {
-    position: absolute;
-    top: -70px;
-}
-
-.app_image {
-    width: 26vw;
-    height: 26vh;
-    max-height: 178px;
-}
-
-.app_image_wrapper {
-    text-align: center;
-}
-
-.footer_image {
-    height: 62px;
-    width: 39px;
-}
-
-.main_text {
-    font-size: 13pt;
-    color: #D1D1D1;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    line-height: 30pt;
-    text-align: center;
-}
-
-footer {
-    background-image: url("./footer_back_image.png");
-    background-size: cover;
-    height: 256px;
-    width: 100vw;
-    z-index: -10;
-    scroll-snap-align: start;
-}
-
-.footer_mask {
-    background-color: rgba(221, 221, 221, 0.8);
-    height: 256px;
-    width: 100vw;
-    position: absolute;
-    z-index: -5;
-}
-
-#footer_logo_container {
-    justify-content: center;
-    display: inline-flex;
-    height: 62px;
-}
-
-#footer_logo_container figure {
-    width: 39px;
-}
-
-.day {
-    text-align: center;
-    color: #2521FF;
-    font-size: 18pt;
-    margin: 10px 0;
-    font-weight: bold;
-}
-
-small {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    display: block;
-    color: #2521FF;
-    text-align: left;
-    margin: 0 auto;
-    width: 311px;
-    font-size: 9pt;
-}
-
-#footer_top {
-    margin-left: 10px;
-}
-
-#footer_top span:nth-child(1) {
-    display: block;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    font-size: 24pt;
-    height: 33px;
-    width: 264px;
-    color: #2521FF;
-    font-weight: bold;
-}
-
-#footer_top span:nth-child(2) {
-    font-size: 16pt;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    color: #2521FF;
-    font-weight: bold;
-}
-
-.footer_wrapper {
-    margin: 55px 42px 30px 34px;
-}
-
-.common_border {
-    margin: 0 auto;
-    margin-top: 9vh;
-    width: 1px;
-    background-color: #231FFF;
-    text-align: center;
-    z-index: 20;
-    position: relative;
-}
-
-.common_border_radius {
-    width: 10px;
-    height: 10px;
-    background-color: #231FFF;
-    border-radius: 50%;
-    z-index: 20;
-    position: absolute;
-    display: block;
-    margin: 0 auto;
-    left: 48.5%;
-}
-
-.border_1 {
-    height: 21.5vh;
-}
-
-.border_1 div {
-    margin-top: 10vh;
-}
-
-.border_2 {
-    height: 36vh;
-}
-
-.border_3 {
-    height: 31vh;
-}
-
-.border_top {
-    height: 7vh;
-    width: 1px;
-    background-color: #231FFF;
-    z-index: 20;
-    position: relative;
-}
-
-.border_wrapper {
-    position: absolute;
-    top: 0;
-    right: 30px;
-}
-
-.border_radius_top {
-    width: 10px;
-    height: 10px;
-    background-color: #231FFF;
-    border-radius: 50%;
-    z-index: 20;
-    position: absolute;
-    display: block;
-    top: 7vh;
-    right: -4.5px;
-}
-
-.scroll_text {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    position: absolute;
-    top: 8.5vh;
-    right: -5vw;
-    color: #231FFF;
-}
-
-small span {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
-    font-weight: bold;
+@keyframes effect{
+  10%{
+    transform: scale3d(1.1, 1.1, 1.1);
+    opacity: 0;
+  }
+  85%{
+    transform: scale3d(1.8, 1.8, 1.8);
+    opacity: 0.5;
+  }
+  100%{
+    transform: scale3d(1.9, 1.9, 1.9);
+    opacity: 0;
+  }
 }
