--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>岩崎学園入学式2019</title>
+    <%= stylesheet_link_tag "user" %>
+    <%# <link rel="stylesheet" href="style.css"> %>
+    <link rel="stylesheet" href="iphone_len_style.css" media="screen and (max-width: 480px)">
+</head>
 <body oncontextmenu="return false" oncopy="return false" onfocus="return false" id="heart_body">
     <section id="container" class="red">
         <section id="event_container">
@@ -16,5 +28,7 @@
         </section>
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <%= javascript_include_tag 'user.js' %>
+    <%= javascript_include_tag 'user' %>
 </body>
+</body>
+</html>
