--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,12 +1,13 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Hiragino Kaku Gothic Pro','ヒラギノ角ゴ Pro W3','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    scroll-snap-type: y mandatory
+    scroll-snap-type: y mandatory;
 }
 
 img {
@@ -45,7 +46,6 @@ header div span {
     border-radius: 22pt 22pt 22pt 22pt;
     width: 70vw;
     height: 6vh;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     font-size: 14pt;
     margin-top: 10px;
 }
@@ -108,7 +108,6 @@ main {
     text-align: center;
     color: #D1D1D1;
     font-size: 12pt;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     line-height: 34px;
     margin-top: 10px;
 }
@@ -127,7 +126,6 @@ main {
 
 .strong {
     display: table-cell;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     font-size: 18pt;
     height: 0.5vh;
     color: #7568FF;
@@ -161,11 +159,11 @@ main section {
     background-color: #231FFF;
     border: none;
     color: aliceblue;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     font-size: 11px;
     position: absolute;
     right: 21px;
     margin-top: 30px;
+    z-index: 20;
 }
 
 .start_button div img {
@@ -177,6 +175,11 @@ main section {
 
 .start_button div {
     display: block;
+}
+
+.start_button div a span {
+    color: #D1D1D1;
+    z-index: 25;
 }
 
 .number_label {
@@ -234,7 +237,6 @@ main section {
 .main_text {
     font-size: 13pt;
     color: #D1D1D1;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     line-height: 30pt;
     text-align: center;
 }
@@ -275,7 +277,6 @@ footer {
 }
 
 small {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     display: block;
     color: #2521FF;
     text-align: left;
@@ -285,13 +286,12 @@ small {
 }
 
 #footer_top {
-    margin-left: 10px;
+    margin-left: 7px;
 }
 
 #footer_top span:nth-child(1) {
     display: block;
     text-align: center;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     font-size: 24pt;
     height: 33px;
     width: 264px;
@@ -300,11 +300,11 @@ small {
 }
 
 #footer_top span:nth-child(2) {
-    font-size: 16pt;
+    font-size: 15pt;
     text-align: center;
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     color: #2521FF;
     font-weight: bold;
+    display: block;
 }
 
 .footer_wrapper {
@@ -376,7 +376,6 @@ small {
 }
 
 .scroll_text {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     position: absolute;
     top: 8.5vh;
     right: -5vw;
@@ -384,6 +383,5 @@ small {
 }
 
 small span {
-    font-family: 'Franklin Gothic Medium','Futura',sans-serif;
     font-weight: bold;
 }
