--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -14,6 +14,8 @@
 body{
   -webkit-touch-callout:none;
   -webkit-user-select:none; 
+  box-sizing: border-box;
+  margin:     0;
 }
 
 #event_container {
