--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>岩崎学園入学式2019</title>
     <%= stylesheet_link_tag "top" %>
 </head>
@@ -21,7 +22,7 @@
             <div class="info">
                 <h1>情報科学専門学校</h1>
                 <h3>入学式パフォーマンス2019</h3>
-                <button class="app_button"><a href="http://iwasaki2019.com:3000/user/show">WEBアプリを起動 ></a></button>
+                <button class="app_button"><a href="http://192.168.3.14:3000/user/show">WEBアプリを起動 ></a></button>
             </div>
         </div>
     </header>
@@ -49,7 +50,7 @@
             <button class="start_button" onClick="location_button()">
                 <div>
                     <%= image_tag  "button_icon.png" %>
-                    <span>起動</span>
+                    <a href="http://192.168.3.14:3000/user/show"><span>起動</span></a>
                 </div>
             </button>
             <div class="border_1 common_border"></div><div class="common_border_radius"></div></div>
