--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -12,114 +12,118 @@
 <body>
     <header id="header_wrap">
         <div class="border_wrapper">
-            <div class="border_top"></div><div class="border_radius_top"></div>
+            <div class="border_top border_animation"></div>
+            <div class="border_radius_top"></div>
             <div class="scroll_text">scroll</div>
         </div>
-        <div class="figure-wrape">
+        <div class="info_container">
             <figure>
                 <%= image_tag "logo.png" %>
             </figure>
             <div class="info">
                 <h1>情報科学専門学校</h1>
                 <h3>入学式パフォーマンス2019</h3>
-                <button class="app_button"><a href="http://iwasaki2019.com:3000/user/show">WEBアプリを起動 ></a></button>
+                <button class="app_button"><a href="http://10.17.2.163:3000/user/show">WEBアプリを起動 ></a></button>
             </div>
         </div>
     </header>
     <main>
-        <div id="mask"></div>
-        <section>
-            <div class="info_img">
-                <%= image_tag "hello_isc.png" %>
-            </div>
-            <p class="attention">
-                <span>
-                    新入生の皆さん<br>
-                    ご入学おめでとうございます!<br>
-                </span>
-                <span class="attention_section">
-                    私たち情報科学専門は<br>
-                    <span class="strong">【IT × アイドル】</span><br>
-                    をテーマにパフォーマンスを披露します。<br>
-                </span>
-                <span>
-                    こちらではアイドルライブを盛り上げる<br>
-                    WEBアプリの使い方をご説明します。<br>
-                </span>
-            </p>
-            <button class="start_button">
-                <div>
-                    <%= image_tag  "button_icon.png" , :class => "start_button_img"%>
-                    <span>起動</span>
+        <div id="mask">
+            <section>
+                <div class="info_img">
+                    <%= image_tag "hello_isc.png" %>
                 </div>
-            </button>
-            <div class="border_1 common_border"></div><div class="common_border_radius"></div></div>
-        </section>
-        <section>
-        <ul id="app_info_container">
-            <li>
-                <figure class="description">
-                    <%= image_tag "app_image_1.gif", :id=>"app_image"%>
-                </figure>
-                <h3 class="number_label"><div>1</div></h3>
-                <p class="main_text">
-                    WEBアプリに<br>
-                    アクセス
+                <p class="attention">
+                    <span>
+                        新入生の皆さん<br>
+                        ご入学おめでとうございます!<br>
+                    </span>
+                    <span class="attention_section">
+                        私たち情報科学専門は<br>
+                        <span class="strong">【 IT × アイドル 】</span><br>
+                        をテーマにパフォーマンスを披露します。<br>
+                    </span>
+                    <span>
+                        こちらではアイドルライブを盛り上げる<br>
+                        WEBアプリの使い方をご説明します。<br>
+                    </span>
                 </p>
-                <div class="border_2 common_border"></div><div class="common_border_radius"></div>
-            </li>
-            <li>
-                <figure class="description">
-                    <%= image_tag "app_image_2.gif" %>
-                </figure>
-                <%= image_tag "app_image_3.png", :class => "app_image cover_app_image" %>
-                <h3 class="number_label"><div>2</div></h3>
-                <p class="main_text">
-                    スマホを振ると<br>
-                    アイドルたちに「いいね！」を<br>
-                    送信することができます
-                </p>
-                <div class="border_3 common_border"></div><div class="common_border_radius"></div>
-            </li>
-            <li>
-                <figure class="app_image_wrapper">
-                    <%= image_tag "app_image_3_1.png", :class => "app_image" %>
-                    <%= image_tag "app_image_3_2.png", :class => "app_image" %>
-                    <%= image_tag "app_image_3_3.png", :class => "app_image" %>
-                </figure>
-                <h3 class="number_label"><div>3</div></h3>
-                <p class="main_text">
-                    真ん中のハートをタップすると<br>
-                    スマホスライドの色が変わる！<br>
-                    推しの色で応援しよう
-                </p>
-            </li>
-        </ul>
-        </section>
+                <button class="start_button">
+                    <div>
+                        <%= image_tag "button_icon.png"%>
+                        <span>起動</span>
+                    </div>
+                </button>
+                <div class="next_border_wrap">
+                    <div class="border_top next_border"></div>
+                    <div class="border_radius_top"></div>
+                </div>
+            </section>
+            <section>
+            <ul id="app_info_container">
+                <li>
+                    <figure class="description">
+                        <%= image_tag "app_image_1.gif", :class => "app_main_image" %>
+                    </figure>
+                    <h3 class="number_label"><div>1</div></h3>
+                    <p class="main_text">
+                        WEBアプリに<br>
+                        アクセス
+                    </p>
+                    <div class="next_border_wrap next-margin-top">
+                        <div class="border_top next_border"></div>
+                        <div class="border_radius_top"></div>
+                    </div>
+                </li>
+                <li>
+                    <figure class="description">
+                        <%= image_tag "app_image_2.gif", :class => "app_main_image" %>
+                    </figure>
+                    <%= image_tag "app_image_3.png", :class => "cover_app_image" %>
+                    <h3 class="number_label"><div>2</div></h3>
+                    <p class="main_text">
+                        スマホを振ると<br>
+                        アイドルたちに「いいね！」を<br>
+                        送信することができます
+                    </p>
+                    <div class="next_border_wrap next-margin-top">
+                        <div class="border_top next_border"></div>
+                        <div class="border_radius_top"></div>
+                    </div>
+                </li>
+                <li>
+                    <figure class="app_image_wrapper">
+                        <%= image_tag "app_image_3_1.png", :class => "app_image" %>
+                        <%= image_tag "app_image_3_2.png", :class => "app_image" %>
+                        <%= image_tag "app_image_3_3.png", :class => "app_image" %>
+                    </figure>
+                    <h3 class="number_label"><div>3</div></h3>
+                    <p class="main_text">
+                        真ん中のハートをタップすると<br>
+                        スマホスライドの色が変わる！<br>
+                        推しの色で応援しよう
+                    </p>
+                </li>
+            </ul>
+            </section>
+        </div>
     </main>
     <footer>
-        <div class="footer_mask"></div>
-        <div class="footer_wrapper">
-            <div id="footer_logo_container">
-                <figure>
+        <div class="footer_mask">
+            <div class="footer_wrapper">
+                <div id="footer_logo_container">
                     <%= image_tag "logo.png", :class => "footer_image" %>
-                </figure>
-                <div id="footer_top">
-                    <span>情報科学専門学校</span>
-                    <span>入学式パフォーマンス2019</span>
+                    <div id="footer_top">
+                        <span>情報科学専門学校</span>
+                        <span>入学式パフォーマンス2019</span>
+                    </div>
                 </div>
+                <p class="day">4.6 Sat.</p>
+                <small>
+                    <span>CAST</span>／さきぴ こっとん はるる みぽりん づっき ゆうたん　<span>開発</span>／Make IT　<span>テスト協力</span>／IPFactory
+                </small>
             </div>
-            <p class="day">4.6 Sat.</p>
-            <small>
-                <span>CAST</span>/さきぴ　こっとん　はるる　みぽりん　づっき　ゆうたん　<span>開発</span>/Make IT　<span>テスト協力</span>/IPFactory
-            </small>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script>
-        $(".start_button").click(() => {
-            location.href = "http://iwasaki2019.com:3000/user/show";
-        })
-    </script>
 </body>
 </html>
