--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -23,7 +23,7 @@
             <div class="info">
                 <h1>情報科学専門学校</h1>
                 <h3>入学式パフォーマンス2019</h3>
-                <button class="app_button"><a href="http://10.17.2.163:3000/user/show">WEBアプリを起動 ></a></button>
+                <button class="app_button"><a href="http://iwasaki2019.com:3000/user/show">WEBアプリを起動 ></a></button>
             </div>
         </div>
     </header>
