--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -21,8 +21,7 @@
                 <%= image_tag "logo.png" %>
             </figure>
             <div class="info">
-                <h1>情報科学専門学校</h1>
-                <h3>入学式パフォーマンス2019</h3>
+                <%= image_tag "iwasaki_logo.svg", :class => "main_logo" %>                                        
                 <button class="app_button"><a href="http://iwasaki2019.com:3000/user/show">WEBアプリを起動 ></a></button>
             </div>
         </div>
@@ -50,7 +49,7 @@
                 </p>
                 <button class="start_button">
                     <div>
-                        <%= image_tag "button_icon.png"%>
+                        <%= image_tag "button_icon.png" %>
                         <span>起動</span>
                     </div>
                 </button>
@@ -100,7 +99,7 @@
                     <h3 class="number_label"><div>3</div></h3>
                     <p class="main_text">
                         真ん中のハートをタップすると<br>
-                        スマホスライドの色が変わる！<br>
+                        スマホライトの色が変わる！<br>
                         推しの色で応援しよう
                     </p>
                 </li>
@@ -114,8 +113,7 @@
                 <div id="footer_logo_container">
                     <%= image_tag "logo.png", :class => "footer_image" %>
                     <div id="footer_top">
-                        <span>情報科学専門学校</span>
-                        <span>入学式パフォーマンス2019</span>
+                        <%= image_tag "iwasaki_logo.svg", :class => "main_logo" %>                        
                     </div>
                 </div>
                 <p class="day">4.6 Sat.</p>
