--- a/app/views/user/use.html.erb
+++ b/app/views/user/use.html.erb
@@ -9,7 +9,7 @@
     <title>岩崎学園入学式2019</title>
     <%= stylesheet_link_tag "top" %>
 </head>
-<body>
+<body id="body">
     <header id="header_wrap">
         <div class="border_wrapper">
             <div class="border_top border_animation"></div>
@@ -123,5 +123,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://dev.to/li/how-to-requestpermission-for-devicemotion-and-deviceorientation-events-in-ios-13-46g2"></script>
+    <script src="https://developer.mozilla.org/ja/docs/Web/API/DeviceMotionEvent"></cript>
+    <script src="https://triple-underscore.github.io/deviceorientation-ja.html"></script>
+
 </body>
 </html>
